now / redirect to /api/docs
add schema success
